<resources>
    <string name="app_name">魔星秀</string>
    <string name="hello_world">Hello world!</string>
    <string name="comment_hint">西梅吹雪说：</string>
    <string name="comment_add">加好友</string>
    <string name="detail">详情</string>
    <string name="comment">评论</string>
    <string name="preview_str">点击可预览表情</string>
    <string name="copyright1">Copyright © MOIMAGE</string>
    <string name="copyright2">服务声明</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="more_end">已经是最后一页了哦~</string>
    <string name="app_announcement">服务声明\n\n
        1、服务条款的确认和接纳本APP的各项内容和服务的所有权归本公司拥有。用户在接受本服务之前，请务必仔细阅读本条款。
        	用户使用服务，或通过完成注册程序，表示用户接受所有服务条款。\n\n 
		2、用户同意：\n
		(1) 提供及时、详尽及准确的个人资料。\n
		(2) 不断更新注册资料、符合及时、详尽、准确的要求。\n
		如果用户提供的资料不准确，本APP有结束服务的权利。\n
		本APP将不公开用户的姓名、地址、电子邮箱、帐号和电话号码等信息（请阅隐私保护条款）。\n
		用户在本APP的任何行为必须遵循：\n
		(1) 传输资料时必须符合中国有关法规。\n
		(2) 使用信息服务不作非法用途和不道德行为。\n
		(3) 不干扰或混乱网络服务。\n
		(4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。\n\n
 
		3、服务条款的修改\n
		本APP有权在必要时修改条款，将会在页面公布。\n
   		 如果不接受所改动的内容，用户可以主动取消自己的会员资格。如果您不取消自己的会员资格，则视为接受服务条款的变动。\n\n
 
		4、 用户的帐号、密码和安全性\n
		一旦成功注册成为会员，您将有一个密码和用户名。\n
		用户将对用户名和密码的安全负全部责任。另外，每个用户都要对以其用户名进行的所有活动和事件负全责。您可以随时改变您的密码。\n
		用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告本公司。\n\n
 
		5、拒绝提供担保\n
		用户明确同意使用本公司服务，由用户个人承担风险。\n
		本APP不担保服务一定满足用户的要求，也不担保服务不会中断，对服务的及时性、安全性、出错发生都不作担保。\n
		用户理解并接受：任何通过服务取得的信息资料的可靠性有用性取决于用户自己的判断，用户自己承担所有风险和责任。\n\n
		 
		6、有限责任\n
		本APP对任何由于使用服务引发的直接、间接、偶然及继起的损害不负责任。\n
		这些损害可能来自（包括但不限于）：不正当使用服务，或传送的信息不符合规定等。\n\n
		 
		7、对用户信息的存储和限制\n
		本APP不对用户发布信息的删除或储存失败负责，本公司有判定用户的行为是否符合服务条款的要求和精神的保留权利。如果用户违背了服务条款的规定，有中断对其提供服务的权利。\n\n
		 
		8、结束服务\n
		本APP可随时根据实际情况中断一项或多项服务，不需对任何个人或第三方负责或知会。\n
		同时用户若反对任何服务条款的建议或对后来的条款修改有异议，或对服务不满，用户可以行使如下权利：\n
		(1) 不再使用本公司的服务。\n
		(2) 通知本公司停止对该用户的服务。\n\n
		 
		9、信息内容的所有权\n
		本公司的信息内容包括：文字、软件、声音、相片、录象、图表；以及其它信息，所有这些内容受版权、商标、标签和其它财产所有权法律的保护。\n
		用户只能在授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。\n\n
		 
		10、适用法律\n
		上述条款将适用中华人民共和国的法律，所有的争端将诉诸于本网所在地的人民法院。\n
		如发生服务条款与中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款则依旧保持约束力。\n\n
		
		附件：\n\n
		
		隐私保护条款\n
		本APP将严格保守用户的个人隐私，承诺未经过您的同意不将您的个人信息任意披露。\n
		但在以下情形下，我们将无法再提供您前述保证而披露您的相关信息。这些情形包括但不限于：\n
		* 为了您的交易顺利完成，我们不得不把您的某些信息，如您的姓名、联系电话、e-mail等提供给相关如物流服务方，以便于他们及时与您取得联系，提供服务。\n
		* 当您在本APP的行为违反的服务条款，或可能损害他人权益或导致他人遭受损害，只要我们相信披露您的个人资料是为了辨识、联络或采取法律行动所必要的行动时。\n
		* 法律法规所规定的必须披露或公开的个人信息。\n
		* 当司法机关或其它有权机关依法执行公务，要求提供特定个人资料时，我们必须给予必要的配合。\n</string>
    <string name="search">搜索</string>
    <string name="search_tip">少年四大名捕</string>
    <string name="network_error">网络连接异常，请检查网络</string>
    <string name="share_success">分享成功</string>
    <string name="already_signin">已领取</string>
    <string name="xinxi_no">请先安装相应的社交软件</string>
    <string name="leftmenu_comments">评论</string>
    <string name="leftmenu_favorite">喜欢</string>
    <string name="leftmenu_timing_tip1">没人领魔币</string>
    <string name="leftmenu_timing_tip2">亲，你今天打卡了吗？</string>
    <string name="leftmenu_home">首页</string>
    <string name="leftmenu_mystar">我的星迹</string>
    <string name="leftmenu_usercenter">财富中心</string>
    <string name="leftmenu_setting">设置</string>
    <string name="leftmenu_mystar_subtitle">点击这里查看你做过的事情</string>
    <string name="leftmenu_usercenter_subtitle">点击这里查看你积累的财富</string>
    <string name="leftmenu_setting_subtitle">点击这里设置你的个人需求</string>
    <string name="leftmenu_fingerprint_tip">您今天已经打过卡了</string>
    <string name="leftmenu_signin_success">打卡成功，获得魔币</string>
    <string name="leftmenu_no_login">您还没有登录哦~</string>
    <string name="login_title">登录/注册</string>
    <string name="login_btn_text">登	录</string>
    <string name="login_edittext1_hint">请输入您的邮箱/手机号</string>
    <string name="login_edittext2_hint">请输入您的密码</string>
    <string name="login_forgot_pwd">忘记密码?</string>
    <string name="login_use_order">第三方登录</string>
    <string name="regist">注册帐号</string>
    <string name="regist_use_mobile">手机号注册></string>
    <string name="regist_use_email">邮箱注册></string>
    <string name="resend_verification_code">重发验证码</string>
    <string name="nickname">昵称：</string>
    <string name="nickname_occupy">昵称\n已被占用</string>
    <string name="gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown_gender">性别不详</string>
    <string name="email">邮箱：</string>
    <string name="forget_password">忘记密码</string>
    <string name="copyright">Copyright © MOIMAGE</string>
    <string name="regist_title">注册用户</string>
    <string name="regist_phone">手机号码：</string>
    <string name="regist_validate_code">验证码：</string>
    <string name="regist_get_code1">获取</string>
    <string name="regist_get_code2">重发验证码</string>
    <string name="regist_password">设置密码：</string>
    <string name="regist_email">绑定邮箱：</string>
    <string name="regist_agreement">您已同意《用户协议》</string>
    <string name="regist_next">下一步</string>
    <string name="regist_nickname">昵称：</string>
    <string name="regist_gender">性别：</string>
    <string name="regist_gender_male">男</string>
    <string name="regist_gender_female">女</string>
    <string name="regist_gender_unknow">性别不详</string>
    <string name="regist_edittext_tip1">请输入您的邮箱地址</string>
    <string name="regist_edittext_tip2">昵称</string>
    <string name="regist_edittext_tip3">6-16位密码</string>
    <string name="regist_edittext_tip4">请再次输入6-16位密码</string>
    <string name="regist_head_title">邮箱注册</string>
    <string name="emailregist_head_title">邮箱注册</string>
    <string name="mobileregist_head_title">手机注册</string>
    <string name="regist_edittext_tip5">请输入您的手机号</string>
    <string name="regist_edittext_tip6">请输入您的验证码</string>
    <string name="regist_sure">确	定</string>
    <string name="email_retrieve_head">邮箱找回密码</string>
    <string name="mobile_retrieve_head">手机找回密码</string>
    <string name="retrieve_getcode">获取验证码</string>
    <string name="retrieve_password">重置密码</string>
    <string name="retrieve_password_toEmail">发送重置密码邮件</string>
    <string name="retrieve_fail">重置失败</string>
    <string name="mobileregist_tip1">该手机号已存在，请重新输入</string>
    <string name="getsms_fail">获取验证码失败，请重新获取</string>
    <string name="getsms_code_empty">验证码不能为空</string>
    <string name="getsms_code_error">验证码错误</string>
    <string name="input_error">输入有误</string>
    <string name="nickname_null">昵称不能为空</string>
    <string name="email_modify_head_title">修改登录邮箱 </string>
    <string name="old_email_address">当前邮箱地址</string>
    <string name="new_email_address">新的邮箱地址</string>
    <string name="password_modify_head_title">修改登录密码</string>
    <string name="old_password">当前登录密码</string>
    <string name="new_password">新的登录密码（6-16位）</string>
    <string name="confirm_password">确认密码</string>
    <string name="information_title">个人信息</string>
    <string name="i_avatar">换头像</string>
    <string name="i_nickname">昵称</string>
	<string name="i_location">地区</string>
	<string name="i_gender">性别</string>
	<string name="i_idol">喜欢的明星</string>
	<string name="i_cellphone">手机号</string>
	<string name="i_email">邮箱</string>
	<string name="i_password">登录密码</string>
	<string name="alter_nickname">修改昵称</string>
	<string name="album">相册</string>
	<string name="alter_idol_detail">可以只填写一位明星，最多可填写三位喜爱的明星。</string>
	<string name="upload_icon_star">开始上传头像</string>
	<string name="upload_icon_success">上传成功</string>
	<string name="upload_icon_fail">上传失败</string>
    <string name="mystar_head_title">我的星迹</string>
    <string name="mystar_tip1">星迹</string>
    <string name="mystar_tip2">好友</string>
    <string name="mystar_tip3">私信</string>
    <string name="mystar_tip4">礼包</string>
    <string name="gift_dialog_tip1">给你发了一个礼包</string>
    <string name="mycomments_head_title">我的评论</string>
    <string name="delete_reply_tip">确定撤回这条评论吗？</string>
    <string name="mylikes_head_title">我的喜欢</string>
    <string name="setting_title">设置</string>
    <string name="about_title">关于魔星秀</string>
    <string name="app_about">app介绍\n\n &#160;&#160;&#160;&#160;魔星秀是国内首款汇集电影，电视剧，综艺节目
		明星角色社交的表情分享平台，实现用户追星乐趣，收藏喜爱的3D明星造型并展示给自己的朋友。\n目前仅支持：Android
		\n敬请期待：IOS / WindowsPhone\n\n南京魔映传媒信息技术有限公司\n微博：@魔映传媒\n
		email：info@moinapp.com"\n</string>
    <string name="check_update">检查更新</string>
    <string name="check_update_alert_tip1">更新</string>
    <string name="feedback_title">反馈意见</string>
    <string name="feedback_submit">感谢您的意见</string>
    <string name="login_out">切换用户</string>
    <string name="feedback_hint">您对我们的app有任何问题、意见、bug都可以写下来告诉我们:）</string>
    <string name="network_connection_fails">网络不给力，请检查网络</string>
    <string name="app_version">已为最新版本</string>
    <string name="app_version_tip1">有新版本更新</string>
    <string name="current_version">当前版本: </string>
    <string name="loginout_alert_tip1">退出登录魔星秀？</string>
    <string name="wealthcenter_top_tip1">累计</string>
    <string name="wealthcenter_top_tip2">小时在线</string>
    <string name="wealthcenter_top_tip3">个分享</string>
    <string name="wealthcenter_title1">我要赚魔币</string>
    <string name="wealthcenter_title2">我要充值</string>
    <string name="wealthcenter_content_title1">每日打卡魔币细则</string>
    <string name="wealthcenter_content_title2">在线时间兑换魔币细则</string>
    <string name="wealthcenter_content_title3">分享兑换魔币细则</string>
    <string name="wealthcenter_head_title">财富中心</string>
    <string name="expression_title">魔星表情</string>
    <string name="collect_number">人喜欢</string>
    <string name="download_number">人下载</string>
    <string name="price_unit">魔币</string>
    <string name="expression_button_text">整组下载</string>
    <string name="game_title">魔星游戏</string>
    <string name="game_name">盗你老墓</string>
    <string name="game_button_text">获取</string>
    <string name="face_unzip_success">数据解压完成</string>
    <string name="face_unzip_fail">数据解压失败，请检查文件</string>
    <string name="face_zip_downloading">正在下载数据，请稍等</string>
    <string name="not_login_comment">您还没有登陆</string>
    <string name="not_content_comment">请输入评论内容</string>
    <string name="video_title">魔星视频</string>
    <string name="news_title">魔星新闻</string>
    <string name="video_date">日期：</string>
    <string name="video_from">来源：</string>
    <string name="video_collect">人喜欢</string>
    <string name="news_date">日期： %s</string>
    <string name="news_from">来源： %s</string>
    <string name="news_collect">%s人喜欢</string>
    <string name="news_comment_edit_tip">我来说两句...</string>
    <string name="news_comment_send">发表</string>
    <string name="news_comment_send_fail">发表失败</string>
    <string name="news_comment_title">热门评论</string>
	<string name="user_data">用户资料</string>
	<string name="wati_to_agree">等待对方同意</string>
	<string name="send_message">发私信</string>
	<string name="send_gift">送礼包</string>
	<string name="userdata_tip">互为好友后可以查看对方资料哦！</string>
	<string name="mobi">魔币</string>
	<string name="regist_time">注册时间</string>
	<string name="mygift">我的礼包</string>
	<string name="gift">礼包</string>
	<string name="mobi_gift">魔币礼包</string>
	<string name="send_friend">发送好友</string>
	<string name="gift_received">收到的礼包</string>
	<string name="gift_sent">发出的礼包</string>
	<string name="send">给</string>
	<string name="from">来自</string>
	<string name="to">发给</string>
	<string name="send_confirm">您确定要送</string>
	<string name="send_number">数量：</string>
	<string name="send_total">合计：</string>
	<string name="mobi_shortage">您的魔币不足，赠送失败。</string>
	<string name="go_charge">我要充值</string>
	<string name="charge_amount_hint">10</string>
	<string name="send_success">您已成功送出</string>
	<string name="charge_success">您已成功充值</string>
	<string name="open_gift">查看详情</string>
	<string name="gift_tip1">的红包</string>
	<string name="gift_tip2">到财富中心查看</string>
	<string name="gift_tip3">回赠好友礼包</string>
	<string name="gift_tip4">给其他好友发礼包</string>
	<string name="send_empty_tip">送出的魔币数量不能为0</string>
	<string name="select_friend_title">选择好友</string>
	<string name="delete_friend_tip1">您与该用户互为好友</string>
	<string name="delete_friend_tip2">是否要解除好友关系？</string>
	<string name="myfriends_title">我的好友</string>
	<string name="check_detail">查看资料</string>
	<string name="chat">私信</string>
</resources>