<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true" 
	android:focusableInTouchMode="true"  >

    <include layout="@layout/login_head_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_edittext_margin_horizontal"
            android:layout_marginRight="@dimen/login_edittext_margin_horizontal"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="horizontal"
            style="@style/login_edittext_style" >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edittext1_hint"
                android:textColorHint="@color/edittext_hint_textColor"
                android:singleLine="true"
                android:background="@null"
                android:textSize="@dimen/textSize_16" />
        </LinearLayout>

        <LinearLayout
            style="@style/login_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_edittext_margin_horizontal"
            android:layout_marginRight="@dimen/login_edittext_margin_horizontal"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/login_edittext_padding_horizontal"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_edittext2_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/edittext_hint_textColor"
                android:textSize="@dimen/textSize_16" >
            </EditText>

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/login_forgot_pwd"
                android:textColor="@color/head_layout_bg_color"
                android:textSize="@dimen/textSize_16" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_submit"
            android:layout_marginTop="15dp"
            android:text="@string/login_btn_text"
            style="@style/btn_textview_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_use_order"
            android:textColor="@color/thirdparty_textcolor"
            android:visibility="gone"
            android:textSize="@dimen/textSize_16" />

		<ImageView 
		    android:id="@+id/login_weixin"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/login_weixin"
		    android:layout_marginTop="20dp"
		    android:visibility="invisible"
		    android:onClick="onClick"
		    android:clickable="true" />
        
        <TextView
            android:id="@+id/regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:text="@string/regist"
            android:textColor="@color/head_layout_bg_color"
            android:textSize="@dimen/title_size"
            android:onClick="onClick"
            android:clickable="true" />

        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:layout_marginBottom="20dp"
	        android:text="@string/copyright"
	        android:textColor="@color/thirdparty_textcolor"
	        android:gravity="bottom" />
    </LinearLayout>
    
</LinearLayout>