<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
        android:layout_width="@dimen/gift_dialog_width"
    	android:layout_height="@dimen/gift_dialog_height"
    	android:background="@drawable/comment_shape"
    	android:orientation="vertical"
    	android:gravity="center" >
    	 
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_success"
			android:textColor="@color/title_color" />
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3" >
	        <TextView 
	            android:id="@+id/send_success_total"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/leftmenu_bottom_bg_color" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mobi"
	            android:textColor="@color/leftmenu_bottom_bg_color" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/send" />
	        <TextView 
	            android:id="@+id/send_success_nickname"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/leftmenu_bottom_bg_color" />
        
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
